# AsyncFrameworkDemo

./: .gitignore  GEMINI.md  README.md  environment.example  main.py  pyproject.toml
.specstory/history/: 2025-08-02_14-22Z-plan-demo-with-stripe-and-supabase.md  2025-08-02_14-47Z-plan-demo-with-stripe-and-supabase.md
app/: main.py
backend/: main.py
backend/database/: connection.py  task_repository.py
backend/graphql/: schema.py
backend/models/: task.py
db/: schema.sql
frontend/: main.py  streamlit_app.py
scripts/: demo.py  setup_demo.py  start_backend.py  start_frontend.py  start_workers.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20241203000000_initial_schema.sql
worker/: main.py
workers/: base_worker.py  stripe_worker.py  worker_manager.py
